# webserv

./: .gitignore  123.txt  CMakeLists.txt  Client.cpp  Client.h  Client.hpp  Makefile  README.md  WebServ.cpp  WebServ.hpp  a.out  autoindex.hpp  autoindex.html  client.hpp  default.conf  error_handler.hpp  final  includes.hpp  index.html  info.txt  main  main.cpp  main_utils.cpp  newmain.cpp  server.cpp  server.hpp  socket.hpp  start.sh  test.conf  test.cpp  testmain.cpp  time.cpp  tmp1  webserv.conf
AuthClients/: base64.cpp  base64.h
Auth_client/: auth_clients  base64.cpp  base64.h
Configs/: default.conf  default_error_page.conf  error_page.conf  limit_client_body_size.conf  multiple_same_port.conf  multiple_servers_with_different_host_name.conf  multiple_servers_with_different_port.conf  setup_routes_with_different_directories.conf  tester_conf.conf
Configs/qtamaril/: default.conf
Configs/test_config/: test_multiple_servers  tester.conf
Configs/welease/: default.conf  test
GetNextLine/: Makefile  get_next_line.cpp  get_next_line.hpp
Includes/: Includes.cpp  Includes.hpp
Libft/: Makefile  ft_calloc.cpp  ft_free_strstr.cpp  ft_isascii.cpp  ft_isprint.cpp  ft_isspace.cpp  ft_memcpy.cpp  ft_memdup.cpp  ft_memmem.cpp  ft_splitString.cpp  ft_str_is_num.cpp  ft_strjoin.cpp  ft_strlcat.cpp  ft_strlcpy.cpp  ft_strncmp.cpp  ft_strnstr.cpp  ft_strstrlen.cpp  ft_strtrim.cpp  ft_substr.cpp  libft.h
PagesHtml/: test.conf  test.sh
Request_Response/: Bytes.cpp  Bytes.h  HeaderValidation.cpp  HeaderValidation.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
Sources/: ServersProcessing.cpp  main.cpp
Sources/Bytes/: Bytes.cpp  Bytes.hpp
Sources/CGI/: CGI.cpp  utilsOfCGI.hpp
Sources/Client/: Client.cpp  Client.h
Sources/PageHtmlGeneration/: PageHtml.cpp  PageHtml.hpp
Sources/ParseConfig/: Location.cpp  Location.hpp  ParseConfig.cpp  ParseConfig.hpp
Sources/Request/: Request.cpp  Request.hpp
Sources/Request/ValidationOfRequest/: HeaderValidation.cpp  HeaderValidation.hpp
Sources/Response/: Response.cpp  Response.hpp
Sources/ValidationOfRequest/: HeaderValidation.cpp  HeaderValidation.hpp
Sources/WebServer/: WebServ.cpp  WebServ.hpp
TestingCGI/cgi-bin/: hello  some.php
WebServSite/: index.html  inner-page.html  portfolio-details.html  website.conf  welease.conf
WebServSite/assets/css/: style.css
WebServSite/assets/js/: main.js
a.out.dSYM/Contents/Resources/DWARF/: a.out
cgi_proccesing/: cgi.h  cgi_proccesing.cpp
cgi_processing/: cgi_processing.cpp  cgi_utils.h
configs/atomatoe/: default.conf
configs/qtamaril/: default.conf  index.html
configs/welease/: default.conf
gnl/: Makefile  get_next_line_utils.cpp
includes/: Location.cpp  Location.hpp  includes.cpp  includes.hpp  page_html.cpp  page_html.hpp
lib/: ft_bzero.cpp  ft_isdigit.cpp  ft_memchr.cpp  ft_putendl_fd.cpp  ft_putstr_fd.cpp  ft_strdup.cpp  ft_strjoin.cpp  ft_strrchr.cpp  libft.h
libft/: Makefile  ft_atoi.cpp  ft_isalnum.cpp  ft_memdup.cpp  ft_memjoin.cpp  ft_memsplit.cpp  ft_splitTim.cpp  ft_strchr.cpp  ft_substr.cpp  libft.h
main.dSYM/Contents/Resources/DWARF/: main
old_version/: a.out  final  server.cpp  server.hpp  test  webserv.conf
old_version/cgi_proccesing/: cgi_proccesing.cpp
old_version/includes/: includes.cpp
old_version/libft/: ft_isalpha.cpp  ft_itoa.cpp  ft_putnbr_fd.cpp  ft_strlen.cpp
old_version/testing_cgi/cgi-bin/: html.py
parse/: Location.cpp  Location.hpp  ParseConfig.cpp  ParseConfig.hpp  parse_utils.cpp
request/: Request.cpp  Request.hpp  request_info
testing_cgi/cgi-bin/: image.py  r.py  test.sh
tmp/: errors.html  test_error_page.html
webServ21/: WebServ.cpp  WebServ.hpp  a.out  main.cpp  test.conf
webServ21/Request/: Request.cpp  Request.hpp
webServ21/includes/: Location.cpp  Location.hpp  includes.cpp  includes.hpp  page_html.cpp
webServ21/libft/: Makefile  ft_atoi.cpp  ft_memcmp.cpp  ft_putchar_fd.cpp  ft_split.cpp  ft_strmapi.cpp
webServ21/testing_cgi/cgi-bin/: hello.cpp
webServ21/tmp/: autoindex.html  info.txt
