cmake_minimum_required(VERSION 3.17)
project(webserv)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(cgi_processing)
include_directories(gnl)
include_directories(includes)
include_directories(libft)
include_directories(parse)
include_directories(Request_Response)

add_executable(webserv
        Sources/main.cpp
        Sources/ServersProcessing.cpp
        Sources/CGI/CGI.cpp
        Sources/CGI/utilsOfCGI.hpp
        GetNextLine/get_next_line.cpp
        GetNextLine/get_next_line.hpp
        GetNextLine/get_next_line_utils.cpp
        Includes/Includes.cpp
        Includes/Includes.hpp
        Sources/PageHtmlGeneration/PageHtml.hpp
        Sources/PageHtmlGeneration/PageHtml.cpp
        Libft/ft_atoi.cpp
        Libft/ft_bzero.cpp
        Libft/ft_calloc.cpp
        Libft/ft_free_strstr.cpp
        Libft/ft_isalnum.cpp
        Libft/ft_isalpha.cpp
        Libft/ft_isascii.cpp
        Libft/ft_isdigit.cpp
        Libft/ft_isprint.cpp
        Libft/ft_isspace.cpp
        Libft/ft_itoa.cpp
        Libft/ft_memchr.cpp
        Libft/ft_memcmp.cpp
        Libft/ft_memcpy.cpp
        Libft/ft_memdup.cpp
        Libft/ft_memjoin.cpp
        Libft/ft_memmem.cpp
        Libft/ft_memsplit.cpp
        Libft/ft_putchar_fd.cpp
        Libft/ft_putendl_fd.cpp
        Libft/ft_putnbr_fd.cpp
        Libft/ft_putstr_fd.cpp
        Libft/ft_splitString.cpp
        Libft/ft_splitTim.cpp
        Libft/ft_str_is_num.cpp
        Libft/ft_strchr.cpp
        Libft/ft_strdup.cpp
        Libft/ft_strjoin.cpp
        Libft/ft_strlcat.cpp
        Libft/ft_strlcpy.cpp
        Libft/ft_strlen.cpp
        Libft/ft_strmapi.cpp
        Libft/ft_strncmp.cpp
        Libft/ft_strnstr.cpp
        Libft/ft_strrchr.cpp
        Libft/ft_strstrlen.cpp
        Libft/ft_strtrim.cpp
        Libft/ft_substr.cpp
        Libft/libft.h
        Sources/ParseConfig/Location.cpp
        Sources/ParseConfig/Location.hpp
        Sources/ParseConfig/ParseUtils.cpp
        Sources/ParseConfig/ParseConfig.cpp
        Sources/ParseConfig/ParseConfig.hpp
        Sources/Bytes/Bytes.cpp
        Sources/Bytes/Bytes.hpp
        Sources/ValidationOfRequest/HeaderValidation.cpp
        Sources/ValidationOfRequest/HeaderValidation.hpp
        Sources/Request/Request.cpp
        Sources/Request/Request.hpp
        Sources/Response/Response.cpp
        Sources/Response/Response.hpp
        Sources/WebServer/WebServ.cpp
        Sources/WebServer/WebServ.hpp
        Sources/Client/Client.cpp
        Sources/Client/Client.h)
